fix some texts thx @_momdo_

--- a/libs/a11yc/resources/ja/checks.yml
+++ b/libs/a11yc/resources/ja/checks.yml
@@ -92,10 +92,10 @@ checks:
           url: http://waic.jp/docs/as/info/201406/7.1.1.1.html
       name: 画像（img、area、input要素の画像ボタン等）には適切なalt属性値があてがわれている
       tech: |
+        HTML5においては、alt省略の例外がありますが、この例外を適用するためには、HTML5の仕様をよく理解した上で適用してください。この例外が該当する場合であっても当チェックツールでは警告を出します。
         画像化された文字であれば、原則、画像と一致するaltを付与してある。あわせて、できれば、本当にその文字を画像化すべきか、よく吟味してください。
         装飾目的の画像なので、altを空にしている。この場合でも<code>alt=""</code>とするようにして、alt属性値を省略しないようにしてください。<code>alt=" "</code>など空白文字をaltにいれておくと、スクリーンリーダごとに対応が異なるので、装飾目的の画像の場合は、空白文字でなく空文字にするほうがベターです。全角空白や&amp;nbsp;は、空白文字の扱いにすらならないので、これらの文字のみでaltとするのは避けてください。ちなみに、<code>role="presentation"</code>というように、装飾目的であることを属性値で明示すると、このアクセシビリティチェッカーのチェック時に警告が出なくなりますが、決して<code>role="presentation"</code>の濫用を推奨するものではありません。
         低速回線環境の利用者が、画像表示をオフにしていることがあります。適切なaltは、「画像をあえて表示するかどうか」の判断にもなるので、なるべく丁寧にいれてください。
-        HTML5においては、alt省略の例外がありますが、この例外を適用するためには、HTML5の仕様をよく理解した上で適用してください。
         他サーバの画像にリクエストを飛ばして、ログ解析をするための画像なので、空altを入れている。
         画像が存在するが、付近に画像と重複する文字列があり、altを省略している（Aさんの画像があり、その付近に「Aさん」と書いてあるような場合、「Aさん」あるいは「Aさんの画像」といったaltは省略したほうが、スクリーンリーダには読みやすい場合があります）。
         「画像化された文字」と「画像」の判別をつけやすくするため、「写真：XX」というように接頭辞をつけたり「XXの写真」というように説明的なaltを心がけると良いです。たとえば「和菓子」というaltは、「『和菓子』という文字を画像化」したのか、「和菓子の写真」なのか判断を悩ませることがあります。
