--- a/libs/a11yc/resources/en/checks.yml
+++ b/libs/a11yc/resources/en/checks.yml
@@ -84,10 +84,10 @@ checks:
           - 1-1-1d
       name: An appropriate alt attribute value is assigned to an image (image button of img, area, input element, etc.)
       tech: |
+        There is an exception to omit alt in HTML5, but in order to apply this exception, please apply it after understanding the specification of HTML5 well. Even if this exception is applicable, this check tool issues a warning.
         If it is an imaged character, in principle, alt matching the image is given. In addition, please, if possible, please carefully examine whether you really want to image that character.
         Because the image of decorative purposes, have an alt in the sky. Even in this case, make sure to set <code>alt=""</code> and do not omit the alt attribute value. Incidentally, if you indicate that it is for decoration purposes with attribute values, such as <code>role="presentation"</code>, you will not get a warning when checking this accessibility checker. It is not a recommendation to abuse <code>role="presentation"</code>.
         Users in low-speed line environments may have turned off image display. The appropriate alt is also a judgment of "whether to display the image dared", please put it as carefully as possible.
-        There is an exception to omit alt in HTML5, but in order to apply this exception, please apply it after understanding the specification of HTML5 well.
         Since it is an image for skipping requests to images of other servers and analyzing logs, empty alt is inserted.
         There is an image, but there is a character string duplicated with the image in the vicinity, and alt is omitted. (If there is an image of Mr. A and there is written "Mr. A" in the vicinity thereof, "Mr. A" Alternatively, alt such as "Mr. A's image" may be easier to read for screen readers if omitting alt).
         In order to make it easy to distinguish between "imaged character" and "image", it is good to attach a prefix such as "photo: XX" or a descriptive alt like "XX photo". For example, alt "Japanese sweets" may bother to judge whether it is "imaged" the word "Japanese sweets" or "a picture of Japanese sweets".
