--- a/libs/a11yc/resources/en/errors.yml
+++ b/libs/a11yc/resources/en/errors.yml
@@ -60,11 +60,6 @@ errors:
     criterion: 1-3-1
     code: 1-3-1a
 
-  meanless_element:
-    message: HTML element that are meaningless is used
-    criterion: 1-3-1
-    code: 1-3-1a
-
   meanless_element_timing:
     message: Do not mark up movement, flashing in HTML
     criterion: 2-2-2
@@ -209,6 +204,12 @@ errors:
     message: section should include h1-6 element
     criterion: 1-3-1
     code: 1-3-1a
+
+  meanless_element:
+    message: HTML element that are meaningless is used
+    criterion: 1-3-1
+    code: 1-3-1a
+    notice: true
 
   cannot_contain_newline:
     message: A line feed code can not be included in an attribute value
