--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -60,11 +60,6 @@ errors:
     criterion: 1-3-1
     code: 1-3-1a
 
-  meanless_element:
-    message: 意味づけのないHTML要素を使っています
-    criterion: 1-3-1
-    code: 1-3-1a
-
   meanless_element_timing:
     message: 動き、点滅をHTMLでマークアップしないでください
     criterion: 2-2-2
@@ -76,7 +71,7 @@ errors:
     code: 2-4-2a
 
   langless:
-    message: html要素で文書の初期設定言語を特定してください
+    message: html要素で文書の基本言語を特定してください
     criterion: 3-1-1
     code: 3-1-1a
 
@@ -209,6 +204,12 @@ errors:
     message: sectionタグはh1-6要素を含めることをおすすめします
     criterion: 1-3-1
     code: 1-3-1a
+
+  meanless_element:
+    message: 意味づけのないHTML要素を使っています
+    criterion: 1-3-1
+    code: 1-3-1a
+    notice: true
 
   cannot_contain_newline:
     message: 属性値の中に改行コードを含めることはできません
