--- a/libs/a11yc/resources/ja/tests.yml
+++ b/libs/a11yc/resources/ja/tests.yml
@@ -2,7 +2,7 @@
 tests:
   doc1:
     name: レベルの決め方
-    tech: |
+    doc: |
       達成レベルはレベルA、レベルAA、レベルAAAの三つがあります。
       レベルAには、「1.1.1 非テキストコンテンツ（文字でないコンテンツなので、視覚障害者のスクリーンリーダの対象とならず、特別の配慮がないと視覚障害者が情報を全く取得できないもの）」や「2.1.2 キーボードトラップなし（キーボードではまったくアクセスできないコンテンツを作ってしまうと、キーボードしか利用できないユーザを阻害してしまうことがある）」「2.3 発作の防止（ページ内で閃光を放つコンテンツがあると、利用者の中にはてんかんの症状を起こしてしまうことがある）」など、いわば「最低限配慮すべき達成基準」がまとまっています。
       レベルAAでは、レベルAでは予算や工数的に対応が難しいが、対応することが望ましい項目が追加されます。たとえば天気予報等ライブの動画へのキャプションの付与（1.2.4）や、収録済みの動画への音声解説の付与（1.2.5）などが求められるようになります。
@@ -15,7 +15,7 @@ tests:
 
   doc2:
     name: 適合、準拠、一部準拠、配慮
-    tech: |
+    doc: |
       JIS X 8341-3:2016は、JISマーク表示制度の対象規格ではないので、いわゆる「JISマーク」を付与することはできません。また「適合」の表記に関しても、JIS Q 17050-1およびJIS Q 17050-2に沿った適合性評価を経ないと、表記できないことになっています。
       これを救済する形で、「準拠」という対応度の表記が生まれました。
       「準拠」は、試験を実施し、達成基準を満たしていることが確認できれば表記できます。
@@ -32,7 +32,7 @@ tests:
 
   doc3:
     name: ページの選出方法「ウェブページ単位」
-    tech: |
+    doc: |
       「ウェブページ単位」でのチェックの場合は、チェック対象のページ内すべてを対象とする必要があります。たとえば「動画を除く」といった対応をしてはいけません。コメント欄など、ページ作成者が手を出せない項目によってレベルを達成できない場合は、「部分適合」を宣言してください。
       「ウェブページ単位」でのチェックの場合、その対象のページが一連のプロセスの一部である場合は、一連のプロセス全体を対象とするようにしてください。たとえばショッピングカートの決済のプロセスがこれにあたります。
       このシステムでは、「ウェブページ単位」を対象としている場合は、サイト全体のアクセシビリティ報告書は生成されません。
@@ -43,7 +43,7 @@ tests:
 
   doc4:
     name: ページの選出方法「ウェブページ一式単位」
-    tech: |
+    doc: |
       「ウェブページ一式単位」でのチェックの場合は、「全て」「ランダム」「代表的なページ」「ランダム＋代表的なページ」の何れを対象としているか明示しましょう。
       「全て」は文字通り全てのページを対象とします。
       ウェブサイトの規模が100ページを超えるようなサイトの場合は、「ランダム＋代表的なページ」が、推奨されています。「代表的なページ」には、トップページは当然ですが、サイトの中で主要なコンテンツであると考えられるページを対象に含めるようにしてください。
@@ -55,7 +55,7 @@ tests:
 
   doc5:
     name: アクセシビリティ方針
-    tech: |
+    doc: |
       アクセシビリティに配慮をしているサイトは、アクセシビリティ方針を公開すると良いでしょう。アクセシビリティ方針には、「どのサイトを対象とするか（URLとサイト名の記載）」「サイト内のどのページのアクセシビリティを重視するか」「除外する項目（PDFや動画など）の有無」「目標とする達成レベルと達成予定期日」などを記載することが推奨されています。
     urls:
       -
@@ -64,7 +64,7 @@ tests:
 
   doc6:
     name: アクセシビリティ・サポーテッド
-    tech: |
+    doc: |
       一般的なブラウザなどで利用可能な実装方法である場合、「アクセシビリティ・サポーテッドである」と言えます。
       アクセシビリティ・サポーテッド情報は、ウェブアクセシビリティ基盤委員会が提供しているAS情報で確認できます。
     urls:
@@ -74,7 +74,7 @@ tests:
 
   doc7:
     name: 同期したメディア
-    tech: |
+    doc: |
       端的に表現すると、映像と音声が同時に流れる動画。「音声しか含まない」「映像しか含まない」と区別するために用いられる用語。
     urls:
       -
@@ -83,7 +83,7 @@ tests:
 
   doc8:
     name: 「非テキストコンテンツ（動画や音声）」でアクセシビリティを確保するためのメモ（レベルA）
-    tech: |
+    doc: |
       共通：動画内でも色や形に依存した情報提供をしない（1-3-1a、1-4-1a）。また自動再生される場合は、利用者によって停止できるようにしておくこと（1-4-2b）。また閃光に関しても注意を忘れないでください（2-3-1b）。
       音声のみ（収録済）：音声と同等の内容のテキストを用意する。話者や（笑い）などを忘れないようにする（1-2-1c）。
       音声のみ（ライブ）：「ライブ音声であること」と「なんのライブ音声であるのか」を説明する（1-1-1f）。
@@ -98,7 +98,7 @@ tests:
 
   doc9:
     name: 「非テキストコンテンツ（動画や音声）」でアクセシビリティを確保するためのメモ（レベルAA）
-    tech: |
+    doc: |
       音声のみ（収録済）：レベルAと同じ。
       音声のみ（ライブ）：レベルAと同じ。
       映像のみ（収録済）：レベルAと同じ。
@@ -112,7 +112,7 @@ tests:
 
   doc10:
     name: 「非テキストコンテンツ（動画や音声）」でアクセシビリティを確保するためのメモ（レベルAAA）
-    tech: |
+    doc: |
       共通：音声コンテンツがある場合、背景音と前景音の差を十分確保してください（1-4-7b）。また、背景音ミュートも求められます（1-4-7c）。
       音声のみ（収録済）：レベルAと同じ。
       音声のみ（ライブ）：正確な代替コンテンツを用意する（1-2-9a）。
@@ -126,7 +126,7 @@ tests:
 
   doc11:
     name: 「非テキストコンテンツ（カルーセル・スライドショー）」でアクセシビリティを確保するためのメモ
-    tech: |
+    doc: |
       ウェブサイトにはしばしば「カルーセル（スライドショー）」が設置されます。カルーセルは複数の情報を一箇所で、多くの利用者にとっては目立つ場所に、設置できるため、場合によっては便利なものですが、利用者によっては、バリアになります（2-2-1b）。
       利用者によっては、自動的な動きのあるコンポーネントは、利用者の集中力を妨げ、本来得たい情報の取得を阻害することがあり、これが致命的な問題になることがあります（2-2-2b）。
       カルーセルに関しては、「利用しない」あるいは「自動再生しない」あるいは「わかりやすい停止方法を提供する」のいずれかの措置を検討してください。
