--- a/libs/a11yc/resources/en/tests.yml
+++ b/libs/a11yc/resources/en/tests.yml
@@ -2,7 +2,7 @@
 tests:
   doc1:
     name: How to decide the level
-    tech: |
+    doc: |
       There are three achievement levels, A, AA, AAA.
       Level A includes "1.1.1 Non-text Content (which is not text, it is not subject to the screen reader of the visually impaired, and the visually impaired can not acquire any information unless special consideration is given)" and "2.1.2 No Keyboard Trap (If you create content that can not be accessed at all with the keyboard, it may interfere with users who can only use the keyboard)" "2.3 Seizures (If you have content that flashes on the page, Some users may cause symptoms of epilepsy) ", so to speak," success criterions achievement that should be considered at the minimum "is gathered.
       For level AA, level A is difficult to deal with in terms of budget and man-hours, but items that should be dealt with are added. For example, it will be required to give captions to live videos such as weather forecast (1.2.4), and to give recorded description (1.2.5) to recorded videos.
@@ -10,7 +10,7 @@ tests:
 
 #  doc3:
 #    name: How to select a page:"Web page unit"
-#    tech: |
+#    doc: |
 #      In the case of "Web page unit" check, it is necessary to target all the pages to be checked. For example, do not correspond "excluding movies". If the level can not be achieved by items that the page creator can not handle such as comment fields, please declare "partial adaptation".
 #      In the case of "Web page unit" check, if the target page is part of a series of processes, please consider the whole series of processes. For example, this is the shopping cart payment process.
 #      In this system, if you are targeting "web page unit", the site-wide accessibility report is not generated.
@@ -21,7 +21,7 @@ tests:
 
 #  doc4:
 #    name: How to select pages:"Complete sets of web pages"
-#    tech: |
+#    doc: |
 #      In the case of "Complete sets of web pages" check, let's clarify which of "all" "random" "representative page" "random + representative page" is targeted.
 #      "All" literally covers all pages.
 #      For sites where the size of the website exceeds 100 pages, "random + representative page" is recommended. On the "representative page", the top page is obviously included, but please include pages that are considered to be the main content in the site.
@@ -33,7 +33,7 @@ tests:
 
   doc6:
     name: Accessibility Supported
-    tech: |
+    doc: |
       If it is an implementation method that can be used with a general browser, it can be said that it is "accessibility supported."
     urls:
       -
@@ -42,7 +42,7 @@ tests:
 
   doc7:
     name: Synchronized media
-    tech: |
+    doc: |
       To put it briefly, a movie where video and audio simultaneously flow. The term used to distinguish it from "only audio" or "contains only movie".
     urls:
       -
@@ -51,7 +51,7 @@ tests:
 
   doc8:
     name: Notes for securing accessibility with "non-text content (movies and audios)" (Level A)
-    tech: |
+    doc: |
       Common:We do not provide information dependent on color or form even in movies (1-3-1a, 1-4-1a). In the case of automatic playback, it should be able to be stopped by the user (1-4-2b). Also do not forget to be careful about flash (2-3-1b).
       Audio-only(Prerecorded):Prepare a text equivalent to voice. Do not forget the speaker (laugh) etc (1-2-1c).
       Audio-only(Live):Explain "it is a a live audio" and "what live audio it is" (1-1-1f).
@@ -66,7 +66,7 @@ tests:
 
   doc9:
     name: Notes for securing accessibility with "non-text content (movies and audios)" (Level AA)
-    tech: |
+    doc: |
       Audio-only(Prerecorded):Same as Level A.
       Audio-only(Live):Same as Level A.
       Video-only(Prerecorded):Same as Level A.
@@ -80,7 +80,7 @@ tests:
 
   doc10:
     name: Notes for securing accessibility with "non-text content (movies and audios)" (Level AAA)
-    tech: |
+    doc: |
       Common:When there is audio content, please ensure enough difference between background sound and foreground sound (1-4-7b). Also, background sound mute is required (1-4-7c).
       Audio-only(Prerecorded):Same as Level A.
       Audio-only (Live):Prepare accurate alternative content (1-2-9a).
@@ -94,7 +94,7 @@ tests:
 
   doc11:
     name: Notes for securing accessibility with "non-text content (carousel / slide show)"
-    tech: |
+    doc: |
       "Carousel (slide show)" is often placed on the website. Carousel is convenient depending on the situation because multiple information can be set in one place and for many users to be conspicuous, but depending on the user it becomes a barrier (2-2-1b).
       Depending on the user, a component with automatic movement hinders concentration ability and may obstruct acquisition of information that you would like to obtain originally (2-2-2b).
       For carousel, please consider one of "Do not use" or "Do not autoplay" or "Provide easy-to-understand stop method".
