--- a/libs/a11yc/resources/en/errors.yml
+++ b/libs/a11yc/resources/en/errors.yml
@@ -2,218 +2,487 @@ errors:
 
   alt_attr_of_img:
     message: The alt attribute of the img element is missing. Please do not omit the alt attribute value itself even for images for decorative purposes
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+    techs:
+      - H37
+      - F38
+      - F65
 
   empty_alt_attr_of_img_inside_a:
     message: If there is only an img element in the a element, the alt attribute value of the img element is not an empty character but a character indicating the purpose of the link should be included
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+      - 2-4-4
+      - 2-4-9
+    techs:
+      - H30
+      - H37
 
   area_has_alt:
     message: The alt attribute of the area element does not exist or the alt attribute value is an empty string. Please enter the character representing the purpose of the area element
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+      - 2-4-4
+      - 2-4-9
+    techs:
+      - H24
+      - F65
 
   img_input_has_alt:
     message: The alt attribute of input element does not exist or the alt attribute value is null. When the type of the input element is image, please enter the character representing purpose
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+    techs:
+      - F65
+      - H36
 
   empty_link_element:
     message: There is an element that has a link destination but no link string
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
+      - 2-4-9
+    techs:
+      - H30
+      - G91
+      - G53
 
   here_link:
     message: Do not link something like "here" as a link
-    criterion: 2-4-4
+    criterions:
+      - 2-4-9
+    techs:
+      - G53
+
+  css_suspicious_paren_num:
+    message: There seems to be a disproportionate number of CSS braces ({}).
+    criterions:
+      - 4-1-1
+
+  css_suspicious_props:
+    message: Suspicious CSS property exists.
+    criterions:
+      - 4-1-1
+
+  css_suspicious_prop_and_vals:
+    message: Suspicious CSS property and value exists.
+    criterions:
+      - 4-1-1
+
+  css_is_meanfull_content:
+    message: Content is inserted in CSS content. Please check if it is not for decoration purpose.
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - F87
+
+  css_invisible:
+    message: Some content is hidden by CSS. Please make sure that it does not interfere with users visually obtaining information.
+    criterions:
+      - 1-3-1
+    notice: true
+
+  css_background_image_only:
+    message: If you designate a background image without specifying a background color in CSS, foreground information may not be acquired in an environment where images are not loaded.
+    criterions:
+      - 1-4-3
+      - 1-4-6
+      - 1-4-8
+    notice: true
+    techs:
+      - F24
 
   too_much_opens:
     message: It seems there are too many opening tags. Since this error will fail to locate the location, check the structure by browsing the DOM of the browser etc.
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   too_much_ends:
     message: It seems there are too many closing tags. Since this error will fail to locate the location, check the structure by browsing the DOM of the browser etc.
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   unclosed_elements:
     message: There is an incomplete tag
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   suspicious_ends:
     message: There is a suspicious closing tag
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   appropriate_heading_descending:
     message: The descending order of the heading is not valid
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
+    techs:
+      - H42
+      - F2
 
   meanless_element_timing:
     message: Do not mark up movement, flashing in HTML
-    criterion: 2-2-2
+    criterions:
+      - 2-2-2
+    techs:
+      - F47
 
   titleless:
     message: The title element does not exist or the content of the title element is empty (or blank)
-    criterion: 2-4-2
+    criterions:
+      - 2-4-2
+    techs:
+      - F25
+      - G88
+      - H25
 
   langless:
     message: Please specify the default language of the document with the html element
-    criterion: 3-1-1
+    criterions:
+      - 3-1-1
+    techs:
+      - H57
+      - H58
 
   different_lang:
     message: The value of lang is inconsistent
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - H57
 
   invalid_page_lang:
     message: The value of lang in the basic language specification of the page is invalid
-    criterion: 3-1-1
+    criterions:
+      - 3-1-1
+    techs:
+      - H57
 
   invalid_partial_lang:
     message: The value of lang in partial language specification is not valid
-    criterion: 3-1-2
+    criterions:
+      - 3-1-2
+    techs:
+      - H58
 
   link_check:
     message: Suspected broken links
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
 
   no_broken_link_found:
     message: No broken link was found
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
 
   duplicated_attributes:
     message: There is a possibility that attributes are duplicated
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   suspicious_attributes:
     message: There are suspicious attribute values
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   duplicated_ids:
     message: Duplicate id
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F77
 
   duplicated_accesskeys:
     message: Duplicate accesskey
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   unbalanced_quotation:
     message: The number of quotes does not seem to match
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   cannot_contain_multibyte_space:
     message: Full-width space exists in the tag
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   contain_plural_form_elements:
     message: Label should not contain more than one labelable element
-    criterion: 2-4-6
+    criterions:
+      - 2-4-6
+    techs:
+      - H44
 
   labelless:
     message: Use label when using the form element
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
+    techs:
+      - H44
+      - H65
 
   not_label_but_title:
     message: Use label or title attribute which has meaning when using the input/textarea/select element
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
+    techs:
+      - H44
+      - H65
 
   lackness_of_form_ends:
     message: It seems that there are form elements that are not properly nested
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   submitless:
     message: Form has no submit button. Does the situation change without notice?
-    criterion: 3-2-2
+    criterions:
+      - 3-2-2
+    techs:
+      - F36
+      - F37
 
   duplicated_names:
     message: It seems there is a duplicate name attribute value for elements other than checkbox and radio in one form
-    criterion: 4-1-1
+    criterions:
+      - 4-1-2
+    techs:
+      - F68
+      - F70
+      - H88
 
   meta_refresh:
     message: Avoid automatic updating by refreshing the meta element
-    criterion: 2-2-1
+    criterions:
+      - 2-2-1
+      - 3-2-5
+    techs:
+      - F40
+      - F41
+      - H76
 
   titleless_frame:
-    message: Frame / iframe element has no title attribute
-    criterion: 2-4-1
+    message: frame/iframe element has no title attribute
+    criterions:
+      - 2-4-1
+      - 4-1-2
+    techs:
+      - H64
 
   user_scalable_no:
     message: If you set user-scalable=no in the viewport setting, users can not change it to the size they like, so avoid it.
-    criterion: 1-4-4
+    criterions:
+      - 1-4-4
 
   must_be_numeric_attr:
     message: Must be numeric attribute
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   invalid_single_tag_close:
     message: When specifying a single tag, put a space before "/>"
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   headerless_section:
     message: section should include h1-6 element
-    criterion: 2-4-10
+    criterions:
+      - 1-3-1
+      - 2-4-1
+      - 2-4-10
+    notice: true
+    techs:
+      - H69
 
   meanless_element:
     message: HTML element that are meaningless is used
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
     notice: true
+    techs:
+      - G115
 
   cannot_contain_newline:
     message: A line feed code can not be included in an attribute value
-    criterion: 1-3-2
+    criterions:
+      - 1-3-2
     notice: true
 
   check_doctype:
     message: Use Doctype Declarations to specify DTD
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
     notice: true
 
   notice_img_exists:
     message: img elements exists. valid alt?
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - F20
+      - F30
+      - F39
 
   notice_non_html_exists:
     message: Items of below are accessible?
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
 
   style_for_structure:
     message: There is a possibility of providing information depending on color and size
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
     notice: true
+    techs:
+      - F1
+      - F2
 
   same_alt_and_filename_of_img:
     message: The alt attribute value of the img element is the same as the file name. Sometimes it is not a problem
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - H37
+      - F39
 
   ja_word_breaking_space:
     message: There is a possibility of formatting by blank
-    criterion: 1-3-2
+    criterions:
+      - 1-3-2
     notice: true
+    techs:
+      - F32
 
   alt_attr_of_empty:
     message: Is it an empty alt, but does not have any meaning?
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - H37
+      - H67
 
   tell_user_file_type:
     message: If the link destination is a file, it is more nice to specify the file format and file size
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
     notice: true
 
   same_urls_should_have_same_text:
     message: The link string is different although it is the same URL
-    criterion: 3-2-4
+    criterions:
+      - 3-2-4
     notice: true
+    techs:
+      - F31
+      - G197
 
   alt_attr_of_blank_only:
     message: For images for decorative purposes, alt should be empty, not white space
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - H37
+      - H67
 
   same_page_title_in_same_site:
     message: A page with the same title element exists in the site to be checked
-    criterion: 2-4-2
+    criterions:
+      - 2-4-2
     notice: true
+    techs:
+      - F25
+      - G88
+      - H25
 
   unique_label:
     message: There is a possibility that the character string of label has duplication and distinctiveness has been impaired
-    criterion: 2-4-6
+    criterions:
+      - 2-4-6
     notice: true
+    techs:
+      - H44
+      - H65
+      - ARIA6
+
+  table_use_th:
+    message: structure struct with th
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - F46
+
+  table_use_scope:
+    message: By using the scope attribute for th, you can associate heading cells with data cells
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - H63
+
+  table_use_valid_scope:
+    message: For scope attribute, use col, row, rowgroup, colgroup
+    criterions:
+      - 1-3-1
+      - 4-1-1
+    techs:
+      - H63
+
+  table_use_summary:
+    message: explain the summary by using the summary attribute of table
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - H73
+
+  table_use_caption:
+    message: use caption to give a title for table
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - H39
