--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -2,218 +2,490 @@ errors:
 
   alt_attr_of_img:
     message: img要素のalt属性がありません。装飾目的の画像であってもalt属性そのものを省略しないでください
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+    techs:
+      - H37
+      - F38
+      - F65
 
   empty_alt_attr_of_img_inside_a:
     message: a要素の中にimg要素しかない場合、img要素のalt属性値（代替テキスト）は空文字でなくリンクの目的を表す文字を入れてください
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+      - 2-4-4
+      - 2-4-9
+    techs:
+      - H30
+      - H37
 
   area_has_alt:
     message: area要素のalt属性が存在しないか、alt属性値（代替テキスト）は空文字です。area要素の目的を表す文字を入れてください
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+      - 2-4-4
+      - 2-4-9
+    techs:
+      - H24
+      - F65
 
   img_input_has_alt:
     message: input要素のalt属性が存在しないか、alt属性値（代替テキスト）が空文字です。input要素のtypeがimageの時には目的を表す文字を入れてください
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
+    techs:
+      - F65
+      - H36
 
   empty_link_element:
     message: リンク先があるのにリンク文字列のない要素があります
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
+      - 2-4-9
+    techs:
+      - H30
+      - G91
+      - G53
 
   here_link:
     message: 「こちら」のような文字列をリンクにしないでください
-    criterion: 2-4-9
+    criterions:
+      - 2-4-9
+    techs:
+      - G53
+
+  css_suspicious_paren_num:
+    message: CSSのブレース（{}）の数に不釣り合いがあるようです。
+    criterions:
+      - 4-1-1
+
+  css_suspicious_props:
+    message: 疑わしいCSSのプロパティがあります。
+    criterions:
+      - 4-1-1
+
+  css_suspicious_prop_and_vals:
+    message: 疑わしいCSSのプロパティと値があります。
+    criterions:
+      - 4-1-1
+
+  css_is_meanfull_content:
+    message: CSSのcontentでコンテンツが挿入されています。装飾目的でないコンテンツでないか確認してください。
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - F87
+
+  css_invisible:
+    message: CSSで非表示にしているコンテンツがあります。視覚的に情報を得ている利用者を阻害していないか、確認してください。
+    criterions:
+      - 1-3-1
+    notice: true
+
+  css_background_image_only:
+    message: CSSで背景色を指定せずに背景画像を指定すると、画像を読み込まない環境で、前景情報が取得できない場合があります。
+    criterions:
+      - 1-4-3
+      - 1-4-6
+      - 1-4-8
+    notice: true
+    techs:
+      - F24
 
   too_much_opens:
     message: 開始タグが多すぎるようです。このエラーは場所の特定に失敗するので、ブラウザのDOM閲覧などで構造を確認してください
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H74
+      - H88
 
   too_much_ends:
     message: 終了タグが多すぎるようです。このエラーは場所の特定に失敗するので、ブラウザのDOM閲覧などで構造を確認してください
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H74
+      - H88
 
   unclosed_elements:
     message: 不完全なタグのようです
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   suspicious_ends:
     message: 疑わしい終了タグがあります
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H74
+      - H88
 
   appropriate_heading_descending:
     message: 見出しの降順が妥当ではありません
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
+    techs:
+      - H42
+      - F2
 
   meanless_element_timing:
     message: 動き、点滅をHTMLでマークアップしないでください
-    criterion: 2-2-2
+    criterions:
+      - 2-2-2
+    techs:
+      - F47
 
   titleless:
     message: title要素が存在しないか、title要素の中身が空（あるいは空文字）です
-    criterion: 2-4-2
+    criterions:
+      - 2-4-2
+    techs:
+      - F25
+      - G88
+      - H25
 
   langless:
     message: html要素で文書の基本言語を特定してください
-    criterion: 3-1-1
+    criterions:
+      - 3-1-1
+    techs:
+      - H57
+      - H58
 
   different_lang:
     message: langの値が矛盾しています
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - H57
 
   invalid_page_lang:
     message: ページの基本的な言語指定におけるlangの値が妥当でありません
-    criterion: 3-1-1
+    criterions:
+      - 3-1-1
+    techs:
+      - H57
 
   invalid_partial_lang:
     message: 一部分の言語指定におけるlangの値が妥当でありません
-    criterion: 3-1-2
+    criterions:
+      - 3-1-2
+    techs:
+      - H58
 
   link_check:
     message: リンク切れの疑いがあります
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
 
   no_broken_link_found:
     message: リンク切れは見つかりませんでした
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
 
   duplicated_attributes:
     message: 属性値が重複している可能性があります
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   suspicious_attributes:
     message: 疑わしい属性値があります
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   duplicated_ids:
     message: idが重複しています
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F77
 
   duplicated_accesskeys:
     message: accesskeyが重複しています
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   unbalanced_quotation:
     message: 引用符の数が一致していないようです
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   cannot_contain_multibyte_space:
     message: タグの中に全角スペースが存在します
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   contain_plural_form_elements:
     message: labelは、複数のラベル付け可能な要素を含まないほうが良いです
-    criterion: 2-4-6
+    criterions:
+      - 2-4-6
+    techs:
+      - H44
 
   labelless:
     message: form要素を使う時には、labelを使いましょう
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
+    techs:
+      - H44
+      - H65
 
   not_label_but_title:
     message: input/textarea/select要素を使う時には、labelを使いましょう。labelが使えない場合は、title属性を使ってください
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
+    techs:
+      - H44
+      - H65
 
   lackness_of_form_ends:
     message: ネストしていないform要素があるようです
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   submitless:
     message: formに送信ボタンがありません。予告なしに状況が変化する状態になっていませんか？
-    criterion: 3-2-2
+    criterions:
+      - 3-2-2
+    techs:
+      - F36
+      - F37
 
   duplicated_names:
     message: ひとつのform内でcheckboxやradio以外の要素について、name属性値に重複があるようです
-    criterion: 4-1-1
+    criterions:
+      - 4-1-2
+    techs:
+      - F68
+      - F70
+      - H88
 
   meta_refresh:
     message: meta要素のrefreshによる自動更新は避けてください
-    criterion: 2-2-1
+    criterions:
+      - 2-2-1
+      - 3-2-5
+    techs:
+      - F40
+      - F41
+      - H76
 
   titleless_frame:
     message: frame/iframe要素にtitle属性がありません
-    criterion: 2-4-1
+    criterions:
+      - 2-4-1
+      - 4-1-2
+    techs:
+      - H64
 
   user_scalable_no:
     message: viewport設定でuser-scalable=noを設定すると、好みの大きさに変更できないので、避けましょう
-    criterion: 1-4-4
+    criterions:
+      - 1-4-4
 
   must_be_numeric_attr:
     message: 数値でなければいけない値があります
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   invalid_single_tag_close:
     message: 単独タグを明示する際、"/>"の前には空白を入れましょう
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
 
   headerless_section:
     message: section要素はh1-6要素を含めることをおすすめします
-    criterion: 2-4-10
+    criterions:
+      - 1-3-1
+      - 2-4-1
+      - 2-4-10
+    notice: true
+    techs:
+      - H69
 
   meanless_element:
     message: 意味づけのないHTML要素を使っています
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
     notice: true
+    techs:
+      - G115
 
   cannot_contain_newline:
     message: 属性値の中に改行コードを含めることはできません
-    criterion: 1-3-2
+    criterions:
+      - 1-3-2
     notice: true
 
   check_doctype:
     message: DOCTYPE宣言を使用してDTDを指定してください
-    criterion: 4-1-1
+    criterions:
+      - 4-1-1
     notice: true
 
   notice_img_exists:
     message: img要素がありますが、alt属性値（代替テキスト）は妥当ですか？
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - F20
+      - F30
+      - F39
 
   notice_non_html_exists:
     message: 以下項目が存在しますが、アクセシブルですか？
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
 
   style_for_structure:
     message: 色や大きさに依存した情報提供の可能性があります
-    criterion: 1-3-1
+    criterions:
+      - 1-3-1
     notice: true
+    techs:
+      - F1
+      - F2
 
   same_alt_and_filename_of_img:
     message: img要素のalt属性値（代替テキスト）がファイル名と同一です。問題でない場合もあります
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - H37
+      - F39
 
   ja_word_breaking_space:
     message: 空白による整形の可能性があります
-    criterion: 1-3-2
+    criterions:
+      - 1-3-2
     notice: true
+    techs:
+      - F32
 
   alt_attr_of_empty:
     message: 空のaltですが、意味を持たない画像ですか？
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - H37
+      - H67
 
   tell_user_file_type:
     message: リンク先がファイルの場合、ファイルの形式やファイルサイズを明記した方が親切です
-    criterion: 2-4-4
+    criterions:
+      - 2-4-4
     notice: true
 
   same_urls_should_have_same_text:
     message: 同じURLなのにリンク文字列が異なります
-    criterion: 3-2-4
+    criterions:
+      - 3-2-4
     notice: true
+    techs:
+      - F31
+      - G197
 
   alt_attr_of_blank_only:
     message: 装飾目的の画像の場合、altは空白文字でなく、空にしてください
-    criterion: 1-1-1
+    criterions:
+      - 1-1-1
     notice: true
+    techs:
+      - H37
+      - H67
 
   same_page_title_in_same_site:
     message: チェック対象のサイトに同じtitle要素のページが存在します
-    criterion: 2-4-2
+    criterions:
+      - 2-4-2
     notice: true
+    techs:
+      - F25
+      - G88
+      - H25
 
   unique_label:
     message: labelの文字列に重複があり、識別性が損なわれている可能性があります
-    criterion: 2-4-6
+    criterions:
+      - 2-4-6
     notice: true
+    techs:
+      - H44
+      - H65
+      - ARIA6
+
+  table_use_th:
+    message: tableは、thを用いて構造化しましょう
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - F46
+
+  table_use_scope:
+    message: thにscope属性を用いることで、見出しセルとデータセルを関連づけることができます
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - H63
+
+  table_use_valid_scope:
+    message: scope属性にはcol、row、rowgroup、colgroupのいずれかを用いてください
+    criterions:
+      - 1-3-1
+      - 4-1-1
+    techs:
+      - H63
+
+  table_use_summary:
+    message: tableは、summary属性を用いて、概要を説明しましょう
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - H73
+
+  table_use_caption:
+    message: tableは、captionを用いて表題を与えましょう
+    criterions:
+      - 1-3-1
+    notice: true
+    techs:
+      - H39
