--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,31 @@
 !/config/.htaccess
 !/libs/.htaccess
 config/config.php
-jwp_*
-jwp-*
 readme.txt
 composer.json
 composer.lock
 composer.phar
+assets/css/jwp-a11y.css
+assets/js/jwp-a11y.js
+classes/Bulk.php
+classes/Center.php
+classes/Checklist.php
+classes/Docs.php
+classes/Issues.php
+classes/Locale.php
+classes/Notation.php
+classes/Pages.php
+classes/Results.php
+classes/Settings.php
+classes/Uninstall.php
+classes/Upgrade.php
+classes/Validate.php
+config/config.php
+jwp-a11y.php
+languages/jwp_a11y-ja.mo
+languages/jwp_a11y-ja.po
+readme.txt
+views/checklist/ajax.php
+views/docs/search.php
+views/pages/search.php
+
