--- a/libs/a11yc/resources/ja/errors.yml
+++ b/libs/a11yc/resources/ja/errors.yml
@@ -11,6 +11,7 @@ errors:
       - F65
 
   empty_alt_attr_of_img_inside_a:
+    title: a要素内のimg要素の空のalt属性値
     message: a要素の中にimg要素しかない場合、img要素のalt属性値（代替テキスト）は空文字でなくリンクの目的を表す文字を入れてください
     criterions:
       - 1-1-1
@@ -21,6 +22,7 @@ errors:
       - H37
 
   area_has_alt:
+    title: area要素のalt属性値
     message: area要素のalt属性（代替テキスト）が存在しないか、alt属性値は空文字です。area要素の目的を表す文字を入れてください
     criterions:
       - 1-1-1
@@ -31,6 +33,7 @@ errors:
       - F65
 
   img_input_has_alt:
+    title: type属性値がimageのinput要素のalt属性値
     message: input要素のalt属性（代替テキスト）が存在しないか、alt属性値が空文字です。input要素のtypeがimageの時には目的を表す文字を入れてください
     criterions:
       - 1-1-1
@@ -39,6 +42,7 @@ errors:
       - H36
 
   empty_link_element:
+    title: リンク文字列のないリンク
     message: リンク先があるのにリンク文字列のない要素があります
     criterions:
       - 2-4-4
@@ -49,6 +53,7 @@ errors:
       - G53
 
   here_link:
+    title: 「こちら」的リンク
     message: 「こちら」のような文字列をリンクにしないでください
     criterions:
       - 2-4-9
@@ -56,21 +61,25 @@ errors:
       - G53
 
   css_suspicious_paren_num:
+    title: CSSのブレース
     message: CSSのブレース（{}）の数に不釣り合いがあるようです。
     criterions:
       - 4-1-1
 
   css_suspicious_props:
+    title: 疑わしいCSSのプロパティ
     message: 疑わしいCSSのプロパティがあります。
     criterions:
       - 4-1-1
 
   css_suspicious_prop_and_vals:
+    title: 疑わしいCSSのプロパティと値
     message: 疑わしいCSSのプロパティと値があります。
     criterions:
       - 4-1-1
 
   css_is_meanfull_content:
+    title: contentによるコンテンツの挿入
     message: CSSのcontentでコンテンツが挿入されています。装飾目的でないコンテンツでないか確認してください。
     criterions:
       - 1-3-1
@@ -79,12 +88,14 @@ errors:
       - F87
 
   css_invisible:
+    title: CSSによる非表示
     message: CSSで非表示にしているコンテンツがあります。視覚的に情報を得ている利用者を阻害していないか、確認してください。
     criterions:
       - 1-3-1
     notice: true
 
   css_background_image_only:
+    title: CSSでの背景色を指定しない背景画像
     message: CSSで背景色を指定せずに背景画像を指定すると、画像を読み込まない環境で、前景情報が取得できない場合があります。
     criterions:
       - 1-4-3
@@ -95,6 +106,7 @@ errors:
       - F24
 
   too_much_opens:
+    title: 開始タグの数
     message: 開始タグが多すぎるようです。このエラーは場所の特定に失敗するので、ブラウザのDOM閲覧などで構造を確認してください
     criterions:
       - 4-1-1
@@ -104,6 +116,7 @@ errors:
       - H88
 
   too_much_ends:
+    title: 終了タグの数
     message: 終了タグが多すぎるようです。このエラーは場所の特定に失敗するので、ブラウザのDOM閲覧などで構造を確認してください
     criterions:
       - 4-1-1
@@ -113,6 +126,7 @@ errors:
       - H88
 
   unclosed_elements:
+    title: 不完全なタグ
     message: 不完全なタグのようです
     criterions:
       - 4-1-1
@@ -121,6 +135,7 @@ errors:
       - H88
 
   suspicious_ends:
+    title: 疑わしい終了タグ
     message: 疑わしい終了タグがあります
     criterions:
       - 4-1-1
@@ -130,6 +145,7 @@ errors:
       - H88
 
   appropriate_heading_descending:
+    title: 見出しの降順
     message: 見出しの降順が妥当ではありません
     criterions:
       - 1-3-1
@@ -138,6 +154,7 @@ errors:
       - F2
 
   meanless_element_timing:
+    title: 動き、点滅
     message: 動き、点滅をHTMLでマークアップしないでください
     criterions:
       - 2-2-2
@@ -145,6 +162,7 @@ errors:
       - F47
 
   titleless:
+    title: title要素の存在
     message: title要素が存在しないか、title要素の中身が空（あるいは空文字）です
     criterions:
       - 2-4-2
@@ -154,6 +172,7 @@ errors:
       - H25
 
   langless:
+    title: 文書の基本言語
     message: html要素で文書の基本言語を特定してください
     criterions:
       - 3-1-1
@@ -162,6 +181,7 @@ errors:
       - H58
 
   different_lang:
+    title: 矛盾したlang属性値
     message: langの値が矛盾しています
     criterions:
       - 4-1-1
@@ -169,6 +189,7 @@ errors:
       - H57
 
   invalid_page_lang:
+    title: 妥当なlang属性値
     message: ページの基本的な言語指定におけるlangの値が妥当でありません
     criterions:
       - 3-1-1
@@ -176,6 +197,7 @@ errors:
       - H57
 
   invalid_partial_lang:
+    title: 妥当なlang属性値（一部の言語）
     message: 一部分の言語指定におけるlangの値が妥当でありません
     criterions:
       - 3-1-2
@@ -183,16 +205,19 @@ errors:
       - H58
 
   link_check:
+    title: リンク切れ
     message: リンク切れの疑いがあります
     criterions:
       - 2-4-4
 
   no_broken_link_found:
+    title: 有効なリンク
     message: リンク切れは見つかりませんでした
     criterions:
       - 2-4-4
 
   duplicated_attributes:
+    title: 属性値の重複
     message: 属性値が重複している可能性があります
     criterions:
       - 4-1-1
@@ -201,6 +226,7 @@ errors:
       - H88
 
   suspicious_attributes:
+    title: 疑わしい属性値
     message: 疑わしい属性値があります
     criterions:
       - 4-1-1
@@ -209,6 +235,7 @@ errors:
       - H88
 
   duplicated_ids:
+    title: idの重複
     message: idが重複しています
     criterions:
       - 4-1-1
@@ -216,6 +243,7 @@ errors:
       - F77
 
   duplicated_accesskeys:
+    title: accesskeyの重複
     message: accesskeyが重複しています
     criterions:
       - 4-1-1
@@ -224,6 +252,7 @@ errors:
       - H88
 
   unbalanced_quotation:
+    title: 引用符の数
     message: 引用符の数が一致していないようです
     criterions:
       - 4-1-1
@@ -232,6 +261,7 @@ errors:
       - H88
 
   cannot_contain_multibyte_space:
+    title: タグの中の全角スペース
     message: タグの中に全角スペースが存在します
     criterions:
       - 4-1-1
@@ -240,6 +270,7 @@ errors:
       - H88
 
   contain_plural_form_elements:
+    title: 妥当なlabel要素
     message: labelは、複数のラベル付け可能な要素を含まないほうが良いです
     criterions:
       - 2-4-6
@@ -247,6 +278,7 @@ errors:
       - H44
 
   labelless:
+    title: form要素使用時のlabel要素の存在
     message: form要素を使う時には、labelを使いましょう
     criterions:
       - 1-3-1
@@ -255,6 +287,7 @@ errors:
       - H65
 
   not_label_but_title:
+    title: ユーザインタフェースコンポーネント使用時のlabel要素の存在
     message: input/textarea/select要素を使う時には、labelを使いましょう。labelが使えない場合は、title属性を使ってください
     criterions:
       - 1-3-1
@@ -263,7 +296,8 @@ errors:
       - H65
 
   lackness_of_form_ends:
-    message: ネストしていないform要素があるようです
+    title: 妥当なform要素
+    message: 終了していないform要素があるようです
     criterions:
       - 4-1-1
     techs:
@@ -271,6 +305,7 @@ errors:
       - H88
 
   submitless:
+    title: 送信ボタンの存在
     message: formに送信ボタンがありません。予告なしに状況が変化する状態になっていませんか？
     criterions:
       - 3-2-2
@@ -279,6 +314,7 @@ errors:
       - F37
 
   duplicated_names:
+    title: name属性値の重複
     message: ひとつのform内でcheckboxやradio以外の要素について、name属性値に重複があるようです
     criterions:
       - 4-1-2
@@ -288,6 +324,7 @@ errors:
       - H88
 
   meta_refresh:
+    title: meta要素のrefresh
     message: meta要素のrefreshによる自動更新は避けてください
     criterions:
       - 2-2-1
@@ -298,6 +335,7 @@ errors:
       - H76
 
   titleless_frame:
+    title: frame/iframe要素のtitle属性
     message: frame/iframe要素にtitle属性がありません
     criterions:
       - 2-4-1
@@ -306,11 +344,13 @@ errors:
       - H64
 
   user_scalable_no:
+    title: viewport設定
     message: viewport設定でuser-scalable=noを設定すると、好みの大きさに変更できないので、避けましょう
     criterions:
       - 1-4-4
 
   must_be_numeric_attr:
+    title: 数値でなければいけない値
     message: 数値でなければいけない値があります
     criterions:
       - 4-1-1
@@ -319,6 +359,7 @@ errors:
       - H88
 
   invalid_single_tag_close:
+    title: 妥当な単独タグ
     message: 単独タグを明示する際、"/>"の前には空白を入れましょう
     criterions:
       - 4-1-1
@@ -327,6 +368,7 @@ errors:
       - H88
 
   headerless_section:
+    title: section見出し
     message: section要素はh1-6要素を含めることをおすすめします
     criterions:
       - 1-3-1
@@ -337,6 +379,7 @@ errors:
       - H69
 
   meanless_element:
+    title: 意味づけのないHTML要素
     message: 意味づけのないHTML要素を使っています
     criterions:
       - 1-3-1
@@ -345,18 +388,21 @@ errors:
       - G115
 
   cannot_contain_newline:
-    message: 属性値の中に改行コードを含めることはできません
+    title: 属性値の中の改行コード
+    message: 属性値の中に改行コードを含めることは避けた方が良いです
     criterions:
       - 1-3-2
     notice: true
 
   check_doctype:
+    title: DOCTYPE宣言の存在
     message: DOCTYPE宣言を使用してDTDを指定してください
     criterions:
       - 4-1-1
     notice: true
 
   notice_img_exists:
+    title: alt属性値の確認
     message: img要素がありますが、alt属性値（代替テキスト）は妥当ですか？
     criterions:
       - 1-1-1
@@ -367,12 +413,14 @@ errors:
       - F39
 
   notice_non_html_exists:
+    title: PDF、Word、Excel、PowerPointの存在確認
     message: 以下項目が存在しますが、アクセシブルですか？
     criterions:
       - 1-1-1
     notice: true
 
   style_for_structure:
+    title: 色や大きさに依存した情報提供の可能性
     message: 色や大きさに依存した情報提供の可能性があります
     criterions:
       - 1-3-1
@@ -382,6 +430,7 @@ errors:
       - F2
 
   same_alt_and_filename_of_img:
+    title: ファイル名と同一のalt属性値
     message: img要素のalt属性値（代替テキスト）がファイル名と同一です。問題でない場合もあります
     criterions:
       - 1-1-1
@@ -391,6 +440,7 @@ errors:
       - F39
 
   ja_word_breaking_space:
+    title: 空白による整形
     message: 空白による整形の可能性があります
     criterions:
       - 1-3-2
@@ -399,6 +449,7 @@ errors:
       - F32
 
   alt_attr_of_empty:
+    title: 空のalt属性値
     message: 空のalt属性値（代替テキスト）ですが、情報を持たない画像ですか？
     criterions:
       - 1-1-1
@@ -408,12 +459,14 @@ errors:
       - H67
 
   tell_user_file_type:
+    title: ファイルサイズ等の情報
     message: リンク先がファイルの場合、ファイルの形式やファイルサイズを明記した方が親切です
     criterions:
       - 2-4-4
     notice: true
 
   same_urls_should_have_same_text:
+    title: 同じURLの異なったリンク文字列
     message: 同じURLなのにリンク文字列が異なります
     criterions:
       - 3-2-4
@@ -423,6 +476,7 @@ errors:
       - G197
 
   alt_attr_of_blank_only:
+    title: 空白文字によるalt属性値
     message: 装飾目的の画像の場合、alt属性値（代替テキスト）は空白文字でなく、空にしてください
     criterions:
       - 1-1-1
@@ -432,6 +486,7 @@ errors:
       - H67
 
   same_page_title_in_same_site:
+    title: ウェブページ一式内でのtitle要素の重複
     message: チェック対象のサイトに同じtitle要素のページが存在します
     criterions:
       - 2-4-2
@@ -442,6 +497,7 @@ errors:
       - H25
 
   unique_label:
+    title: label文字列の重複
     message: labelの文字列に重複があり、識別性が損なわれている可能性があります
     criterions:
       - 2-4-6
@@ -452,6 +508,7 @@ errors:
       - ARIA6
 
   table_use_th:
+    title: thによるtableの構造化
     message: tableは、thを用いて構造化しましょう
     criterions:
       - 1-3-1
@@ -460,6 +517,7 @@ errors:
       - F46
 
   table_use_scope:
+    title: thのscope属性値の存在
     message: thにscope属性を用いることで、見出しセルとデータセルを関連づけることができます
     criterions:
       - 1-3-1
@@ -468,6 +526,7 @@ errors:
       - H63
 
   table_use_valid_scope:
+    title: scope属性の妥当性
     message: scope属性にはcol、row、rowgroup、colgroupのいずれかを用いてください
     criterions:
       - 1-3-1
@@ -476,7 +535,8 @@ errors:
       - H63
 
   table_use_summary:
-    message: tableは、summary属性を用いて、概要を説明しましょう
+    title: tableのsummary
+    message: tableは、summaryを用いて、概要を説明しましょう
     criterions:
       - 1-3-1
     notice: true
@@ -484,6 +544,7 @@ errors:
       - H73
 
   table_use_caption:
+    title: tableのcaption
     message: tableは、captionを用いて表題を与えましょう
     criterions:
       - 1-3-1
