--- a/libs/a11yc/resources/ja/criterions.yml
+++ b/libs/a11yc/resources/ja/criterions.yml
@@ -17,7 +17,7 @@ criterions:
       画像の場合は、本項目を参照してください。
       画像の代替テキストはaltと呼ばれるHTMLの属性値を用いて設定します。
       画像化された文字（文字画像）であれば、原則、画像と一致するaltを付与してください。あわせて、本当にその文字を画像化すべきか、よく吟味してください。
-      装飾目的の画像の場合、altを空することで、支援技術がこの画像を無視できるようになります。この場合でも<code><img src="" alt=""></code>とするようにして、<code><img src=""></code>というように、alt属性値そのものを省略しないようにしてください。なおHTML5においては、alt省略の例外がありますが、この例外を適用するためには、HTML5の仕様をよく理解した上で適用してください。この例外が該当する場合であっても当チェックツールでは警告を出します。
+      装飾目的の画像の場合、altを空することで、支援技術がこの画像を無視できるようになります。この場合でも<code>&lt;img src="" alt=""&gt;</code>とするようにして、<code>&lt;img src=""&gt;</code>というように、alt属性値そのものを省略しないようにしてください。なおHTML5においては、alt省略の例外がありますが、この例外を適用するためには、HTML5の仕様をよく理解した上で適用してください。この例外が該当する場合であっても当チェックツールでは警告を出します。
       <code>alt=" "</code>など空白文字をaltにいれておくと、スクリーンリーダごとに対応が異なるので、装飾目的の画像の場合は、空白文字でなく空文字にするほうがベターです。全角空白や&amp;nbsp;は、空白文字の扱いにすらならないので、これらの文字のみでaltとするのは避けてください。
       ちなみに、<code>role="presentation"</code>というように、装飾目的であることを属性値で明示すると、このアクセシビリティチェッカーのチェック時に警告が出なくなりますが、決して<code>role="presentation"</code>の濫用を推奨するものではありません。
       なお装飾目的の画像については、CSSで背景として設定することも有効ですが、逆に意味のある画像をCSSの背景画像にしないように注意してください[F3]。
@@ -158,8 +158,8 @@ criterions:
       何らかの形で提示されている情報、 構造、及び関係性は、プログラムによる解釈が可能である、又はテキストで提供されている。
     doc: |
       ある利用者にとって、なんらかの情報の役割が理解できるとき、そのほかの利用者にも、その情報の役割を理解できるようにしてください。晴眼者であれば、大きい文字を見たら、「これは見出しだ」と理解できますが、スクリーンリーダを利用している視覚障害者には、「文字の大きさ」という情報が与えられないため、何が見出しなのかわからなくなってしまいます。
-      たとえば見出し(<h*>、<th>など)でマークアップすることで、機械可読性が確保され、様々な利用者に対応できるようになります。
-      また、「<p>の文字を大きくして見出しとする」、「文字を小さくするために<h6>を使う」などの実装はプログラムによる解釈を阻害するものなので不適合になります。
+      たとえば見出し(&lt;h*&gt;、&lt;th&gt;など)でマークアップすることで、機械可読性が確保され、様々な利用者に対応できるようになります。
+      また、「&lt;p&gt;の文字を大きくして見出しとする」、「文字を小さくするために&lt;h6&gt;を使う」などの実装はプログラムによる解釈を阻害するものなので不適合になります。
       プログラムによる解釈を担保した実装をするのが難しい文書の場合、「行頭のアスタリスクは見出しのレベルを表します」「括弧内にお名前を入力してください」といった、テキストによる説明を明示することで達成できますが、原則、HTMLの意味のあるマークアップを優先してください。
       HTML 4.01 及び XHTML 1.x を含むマークアップ言語の場合、b要素およびi要素は、強調目的の場合はstrong/em要素に置き換えてください。HTML5では、本チェッカーでは、警告を出しません。
       strike要素、basefont要素、center要素、font要素は、代わりにCSSを用いて構造と表現を分離するようにしてください。sやstrikeの場合はdel要素に置き換えても良いでしょう。
@@ -335,7 +335,7 @@ criterions:
       キーボードインタフェースには、ソフトウェアキーボードのように物理的でないキーボードも含みます。重度の身体障害の場合、視線入力やスイッチをもちいて、ソフトウェアキーボードを操作している場合があります。
       こういった利用者への配慮から、ウェブページはキーボードのみで操作できることが望ましいとされています。
       ただし、文字の手書き入力など、一連の軌跡に依存している場合などは、マウスなどのポインティングデバイスによる操作が前提であるため、本達成基準では例外としています。
-      エンターキーを検知しないJavaScriptのonclick()による実装や、<div>や<span>など、通常フォーカス対象とならない要素を操作対象としている場合にも注意してください。
+      エンターキーを検知しないJavaScriptのonclick()による実装や、<code>&lt;div&gt;</code>や<code>&lt;span&gt;</code>など、通常フォーカス対象とならない要素を操作対象としている場合にも注意してください。
       ドライビングシミュレータなど、「特定のタイミング」に必然性がある場合は、コンテンツの本質であるといえるでしょう。
       [1.1.1]では、コントロールを受け取る要素がアクセシブルでない場合、説明を設けることで適合となります。本項の「ドライビングシミュレータ」も、その対象なので、[1.1.1]に準じて、どういったコンポーネントなのか説明を付与するようにしてください。
 
@@ -518,7 +518,7 @@ criterions:
     doc: |
       リンク文字列は、そのリンク先がなんであるかを明示するべきです。スクリーンリーダの利用者はタブキー押下だけでリンクのみを辿って文章を読んでいくということをしばしば行いますが、こういう場合に、それぞれのリンク文字列が固有でなく「続きを読む」や「詳しくはこちら」となっていると、リンク先がなんなのかを把握しづらくなります。
       ただ本達成基準では、文脈に頼ったリンク文字列の提供はよしとされています。たとえば書籍の内容がHTML、PDF、MP3で提供されている時に、最初のHTMLだけは書籍のタイトルをリンク文字列に含めているが、以降は「PDF」「MP3」と読み上げることが良しとされています。
-      また、<strong>同じ段落内や<h*>の一群であれば</strong>、いわゆる「こちらリンク」さえも許されます（[G53]）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
+      また、<strong>同じ段落内や<code>&lt;h*&gt;</code>の一群であれば</strong>、いわゆる「こちらリンク」さえも許されます（[G53]）が、「こちらリンク」については、そもそもあまり用いないほうが良いでしょう。
       致命的なバリアではありませんし、JISなどの規格の中でも規定はないのですが、リンク先がPDF等のダウンロード用のファイルの場合は、ファイルであること、ファイルサイズも併記しておくと、誰にとっても便利が良いでしょう。
       リンク先の消失などで、そもそもリンクが切れている場合、アクセシビリティの文脈で問うべき問題ではないかもしれませんが、使いづらいので改善しましょう。
 
@@ -543,7 +543,7 @@ criterions:
     summary: |
       見出し及びラベルは、主題又は目的を説明している。
     doc: |
-      見出し（<h*>や<th>）及びラベル（<label>やリンク文字列など）は、主題又は目的をわかりやすく説明するようにしてください。ここでは「わかりやすさ」が重要です。
+      見出し（<code>&lt;h*&gt;</code>や<code>&lt;th&gt;</code>）及びラベル（<code>&lt;label&gt;</code>やリンク文字列など）は、主題又は目的をわかりやすく説明するようにしてください。ここでは「わかりやすさ」が重要です。
       見出しはセクションの主題を的確に説明し、ラベルはインタフェースコンポーネントを的確に説明することがもとめられています。なお、[1.3.1]では、見出しが誰にでも見出しとして知覚可能であることが求められ、[3.3.2]では、コンポーネントについてのラベル又は説明の存在を求めている。
       formのlabelに関しては、たとえば「ふりがな」を要求するような場面で、カタカナかひらがなのいずれかの入力を求める場合は、labelもしくは付近でその説明を行うなどしてください。もし、システム上の制約がないのであれば、カタカナかひらがなかの入力について、両方受け付ける実装を考えてもいいかもしれません。
 
@@ -645,8 +645,8 @@ criterions:
       略語の元の語、又は意味を特定するメカニズムが利用できる。
     doc: |
       コンテンツ内に略語がある場合は、略語の元の語あるいは意味を知ることができようにしましょう。[3.1.3]とも関係があると言えます。
-      HTML4.01には<abbr>（略語。e.g. XML, HTML）、<acronym>（頭字語。e.g. LAN, NATO）というタグがあり、それぞれ略語をマークアップし、title属性で略語展開したものを意味づけする仕様がありますが、ややアクセシビリティ・サポーテッド状況が怪しいので、要注意です。
-      HTML5では、acronymは廃止されました。abbrでマークアップしましょう。
+      HTML4.01には<code>&lt;abbr&gt;</code>（略語。e.g. XML, HTML）、<code>&lt;acronym&gt;</code>（頭字語。e.g. LAN, NATO）というタグがあり、それぞれ略語をマークアップし、title属性で略語展開したものを意味づけする仕様がありますが、ややアクセシビリティ・サポーテッド状況が怪しいので、要注意です。
+      HTML5では、<code>&lt;acronym&gt;</code>は廃止されました。<code>&lt;abbr&gt;</code>でマークアップしましょう。
 
   3-1-5: &c3-1-5
     code: 3-1-5
@@ -764,7 +764,7 @@ criterions:
     summary: |
       コンテンツが利用者の入力を要求する場合は、ラベル又は説明文が提供されている。
     doc: |
-      利用者にフォームによる入力を求める際、どこに何を入力すべきなのか、わかりやすく情報提供してください。プログラムに解釈できる方法で提供することであればなおよい。具体的には<label>要素で各フォーム要素と関連付けることで、視覚障害者にとっても利用しやすいフォームを作ることができます。
+      利用者にフォームによる入力を求める際、どこに何を入力すべきなのか、わかりやすく情報提供してください。プログラムに解釈できる方法で提供することであればなおよい。具体的には<code>&lt;label&gt;</code>要素で各フォーム要素と関連付けることで、視覚障害者にとっても利用しやすいフォームを作ることができます。
       また、説明や入力の事例などの掲載も好ましいですが、やりすぎるとかえって邪魔になるので、簡潔にするようにしてください。
       必須項目がある場合は、なにが必須項目であるのか、わかりやすく情報提供してください。
       なお、説明文や入力時の例を書く際は、入力欄より前に記載しておく方が、線形的に情報取得しているスクリーンリーダの利用者にとって、間違いが少ないです。
@@ -840,5 +840,5 @@ criterions:
       すべてのユーザインタフェース コンポーネント (フォームを構成する要素、リンク、スクリプトが生成するコンポーネントなど) では、名前 (name) 及び役割 (role) は、プログラムによる解釈が可能である。又、状態、プロパティ、利用者が設定可能な値はプログラムによる設定が可能である。そして、支援技術を含むユーザエージェントが、これらの項目に対する変更通知を利用できる。
     doc: |
       利用者の操作対象になるような要素は、名前、役割、値を持っている場合、プログラムが解釈できる必要があります。
-      値(value)の取得、変更などを、さまざまなユーザエージェントで可能にしてください。たとえば<a>によるリンク文字列は、プログラムで解釈可能です。フォームで入力欄を<textarea>にすれば、その値(value)は取得も変更もできます。<label>でラベルをマークアップすれば、入力欄についての説明をプログラムにより解釈可能になります。
-      普通にHTMLで要素を記述している場合、ここが問題になることは少ないです。しかし普通にHTMLを記述していても、spanなどがフォーカスを受け取って、JavaScriptなどで、コンテンツになんらかの変化をもたらすような実装をしている場合は要注意です。
+      値(value)の取得、変更などを、さまざまなユーザエージェントで可能にしてください。たとえば<code>&lt;a&gt;</code>によるリンク文字列は、プログラムで解釈可能です。フォームで入力欄を<code>&lt;textarea&gt;</code>にすれば、その値(value)は取得も変更もできます。<code>&lt;label&gt;</code>でラベルをマークアップすれば、入力欄についての説明をプログラムにより解釈可能になります。
+      普通にHTMLで要素を記述している場合、ここが問題になることは少ないです。しかし普通にHTMLを記述していても、<code>&lt;span&gt;</code>などがフォーカスを受け取って、JavaScriptなどで、コンテンツになんらかの変化をもたらすような実装をしている場合は要注意です。
