--- a/libs/a11yc/resources/ja/criterions.yml
+++ b/libs/a11yc/resources/ja/criterions.yml
@@ -606,7 +606,7 @@ criterions:
     summary: |
       それぞれのウェブページのデフォルトの自然言語がどの言語であるか、プログラムによる解釈が可能である。
     doc: |
-      HTMLのlangの指定で&lt;html lang="ja"&gt;のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになります（といいつつ、日本語スクリーンリーダ環境での、アクセシビリティ・サポーテッド状況はあまり芳しくない。iPhone+VoiceOverはきちんと反応するようです）。
+      HTMLのlangの指定で<code>&lt;html lang="ja"&gt;</code>のように、ウェブページのデフォルトの言語を指定しておくことで、ユーザエージェントや支援技術がコンテンツを正しく解釈することができるようになります（といいつつ、日本語スクリーンリーダ環境での、アクセシビリティ・サポーテッド状況はあまり芳しくない。iPhone+VoiceOverはきちんと反応するようです）。
       多言語サイト構築の際など、ついこれを忘れて英語ページでもjaとしてしまうことがあるので要注意です。
       また単一のページ内で多言語が混在する場合は、[3.1.2]にも配慮することが強く推奨されています。
 
