--- a/libs/a11yc/resources/ja/criterions.yml
+++ b/libs/a11yc/resources/ja/criterions.yml
@@ -158,8 +158,8 @@ criterions:
       何らかの形で提示されている情報、 構造、及び関係性は、プログラムによる解釈が可能である、又はテキストで提供されている。
     doc: |
       ある利用者にとって、なんらかの情報の役割が理解できるとき、そのほかの利用者にも、その情報の役割を理解できるようにしてください。晴眼者であれば、大きい文字を見たら、「これは見出しだ」と理解できますが、スクリーンリーダを利用している視覚障害者には、「文字の大きさ」という情報が与えられないため、何が見出しなのかわからなくなってしまいます。
-      たとえば見出し(&lt;h*&gt;、&lt;th&gt;など)でマークアップすることで、機械可読性が確保され、様々な利用者に対応できるようになります。
-      また、「&lt;p&gt;の文字を大きくして見出しとする」、「文字を小さくするために&lt;h6&gt;を使う」などの実装はプログラムによる解釈を阻害するものなので不適合になります。
+      たとえば見出し(<code>&lt;h*&gt;</code>、<code>&lt;th&gt;</code>など)でマークアップすることで、機械可読性が確保され、様々な利用者に対応できるようになります。
+      また、「<code>&lt;p&gt;</code>の文字を大きくして見出しとする」、「文字を小さくするために<code>&lt;h6&gt;</code>を使う」などの実装はプログラムによる解釈を阻害するものなので不適合になります。
       プログラムによる解釈を担保した実装をするのが難しい文書の場合、「行頭のアスタリスクは見出しのレベルを表します」「括弧内にお名前を入力してください」といった、テキストによる説明を明示することで達成できますが、原則、HTMLの意味のあるマークアップを優先してください。
       HTML 4.01 及び XHTML 1.x を含むマークアップ言語の場合、b要素およびi要素は、強調目的の場合はstrong/em要素に置き換えてください。HTML5では、本チェッカーでは、警告を出しません。
       strike要素、basefont要素、center要素、font要素は、代わりにCSSを用いて構造と表現を分離するようにしてください。sやstrikeの場合はdel要素に置き換えても良いでしょう。
