--- a/libs/a11yc/resources/en/errors.yml
+++ b/libs/a11yc/resources/en/errors.yml
@@ -231,6 +231,15 @@ errors:
       - F70
       - H88
 
+  no_space_between_attributes:
+    title: no space between attribute
+    message: no space between attribute
+    criterions:
+      - 4-1-1
+    techs:
+      - F70
+      - H88
+
   duplicated_ids:
     title: duplicated id attributes
     message: Duplicate id
