form and labels

--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,7 @@ Header always set X-Frame-Options DENY
 Header always set X-Content-Type-Options nosniff
 
 # Browser XSS Protection
-Header always set X-XSS-Protection "1; mode=block"
+#Header always set X-XSS-Protection "1; mode=block"
 </ifModule>
 
 # web font
